Fix dark mode colors

--- a/src/components/AddressInput/styles.module.css
+++ b/src/components/AddressInput/styles.module.css
@@ -6,6 +6,7 @@
 .container input {
   font-size: 1em;
   background: #fafafa;
+  color: #000;
   padding: 0.5em;
   border: 1px solid #333;
   border-radius: 4px;
