--- a/src/components/Copycat/styles.module.css
+++ b/src/components/Copycat/styles.module.css
@@ -45,6 +45,7 @@
   font-size: 1.5em;
   border-radius: 6px;
   background-color: #fff;
+  color: #000;
   box-shadow: none;
   padding-left: 2em;
   padding-right: 2em;
